--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -8,84 +8,81 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Client Js -->
+    <script src="/mqtt.js"></script>
     <script src="./scripts.js"></script>
-    <script src="./mqttws31.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Client CSS -->
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" href="./bootstrap.min.css">
-    <script src="./jquery-3.3.1.slim.min.js"></script>
-    <script src="./popper.min.js"></script>
-    <script src="./bootstrap.min.js"></script>
+    
 
     <title>Generator Balancing</title>
   </head>
   <body>
     <div class="container" style="height: 100%">
-    <div class="row p-4" style="height: 100px">
-      <div id="round" class="col-sm">
-        <h1>ROUND 1</h1>
+      <div class="row p-4" style="height: 100px">
+        <div id="round" class="col-sm">
+          <h1>ROUND 1</h1>
+        </div>
+        <div class="col-sm-3">
+          <h1>TIME | <span id="time"></span> </h1>
+        </div>
       </div>
-      <div id="time" class="col-sm-3">
-        <h1>TIME | 01:30</h1>
-      </div>
-    </div>
 
-    <div style="height: 300px">
-      <div class="p-1" style="height: 50% ">
-        <div class="progress" style="height: 100%; width: 100%">
-          <div id="demand_bar" class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar"
-          aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 30%">
-            <p id="demand" `style="font-size: 10em; font-weight: bold">30</p>
+      <div style="height: 300px">
+        <div class="p-1" style="height: 50% ">
+          <div class="progress" style="height: 100%; width: 100%">
+            <div id="demand_bar" class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 30%">
+              <p id="demand" `style="font-size: 10em; font-weight: bold">30</p>
+            </div>
+          </div>
+        </div>
+        <div class="p-1" style="height: 50% ">
+          <div class="progress " style="height: 100%; width: 100%">
+            <div id="supply_bar" class="progress-bar progress-bar-striped progress-bar-animated text-dark" role="progressbar"
+            aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 100%">
+              <p id="supply" style="font-size: 10em; font-weight: bold">100</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="p-1" style="height: 50% ">
-        <div class="progress " style="height: 100%; width: 100%">
-          <div id="supply_bar" class="progress-bar progress-bar-striped progress-bar-animated text-dark" role="progressbar"
-          aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 100%">
-            <p id="supply" style="font-size: 10em; font-weight: bold">100</p>
-          </div>
+      <div class="p-1" style="width: 100%">
+        <div class="progress" style="width: 100%; height: 50px">
+          <div id="gp-1" class="progress-bar bg-warning bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1</div>
+          <div id="gp-2" class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">2</div>
+          <div id="gp-3" class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">3</div>
+          <div id="gp-4" class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4</div>
         </div>
       </div>
-    </div>
-    <div class="p-1" style="width: 100%">
-      <div class="progress" style="width: 100%; height: 50px">
-        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">1</div>
-        <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">2</div>
-        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">3</div>
-        <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4</div>
-      </div>
-    </div>
-    <div class="row" style="height: 150px">
-      <div id="state_0" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Surya</h4>
-        <h1 id="power_0">3</h1>
-      </div>
-      <div id="state_1" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Angin</h4>
-        <h1 id="power_1">3</h1>
-      </div>
-      <div id="state_2" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Air</h4>
-        <h1 id="power_2">3</h1>
-      </div>
-      <div id="state_3" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Batubara</h4>
-        <h1 id="power_3">3</h1>
-      </div>
-      <div id="state_4" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Batubara</h4>
-        <h1 id="power_4">3</h1>
-      </div>
-      <div id="state_5" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-        <h4>Batubara</h4>
-        <h1 id="power_5">3</h1>
-      </div>
+      <div class="row" style="height: 150px">
+        <div id="state_1" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Surya</h4>
+          <h1 id="power_1">3</h1>
+        </div>
+        <div id="state_2" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Angin</h4>
+          <h1 id="power_2">3</h1>
+        </div>
+        <div id="state_3" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Air</h4>
+          <h1 id="power_3">3</h1>
+        </div>
+        <div id="state_4" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Batubara</h4>
+          <h1 id="power_4">3</h1>
+        </div>
+        <div id="state_5" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Batubara</h4>
+          <h1 id="power_5">3</h1>
+        </div>
+        <div id="state_6" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
+          <h4>Batubara</h4>
+          <h1 id="power_6">3</h1>
+        </div>
 
+      </div>
     </div>
-    </div>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
