start and stop button in html, no variables yet

--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -14,7 +14,7 @@
     <!-- Client CSS -->
     <link rel="stylesheet" href="./style.css"/>
     <link rel="stylesheet" href="./bootstrap.min.css">
-    
+
 
     <title>Generator Balancing</title>
   </head>
@@ -24,6 +24,8 @@
         <div id="round" class="col-sm">
           <h1>ROUND 1</h1>
         </div>
+        <button type="button" class="btn btn-primary btn-lg">Mulai</button>
+        <button type="button" class="btn btn-secondary btn-lg">Stop</button>
         <div class="col-sm-3">
           <h1>TIME | <span id="time"></span> </h1>
         </div>
@@ -34,7 +36,7 @@
           <div class="progress" style="height: 100%; width: 100%">
             <div id="demand_bar" class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 30%">
-              <p id="demand" `style="font-size: 10em; font-weight: bold">30</p>
+              <p id="demand" style="font-size: 10em; font-weight: bold">30</p>
             </div>
           </div>
         </div>
