--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -34,7 +34,7 @@
           <div class="progress" style="height: 100%; width: 100%">
             <div id="demand_bar" class="progress-bar progress-bar-striped bg-warning text-dark" role="progressbar"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="25" style="width: 30%">
-              <p id="demand" `style="font-size: 10em; font-weight: bold">30</p>
+              <p id="demand" style="font-size: 10em; font-weight: bold">30</p>
             </div>
           </div>
         </div>
