--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -23,8 +23,8 @@
         <div id="round" class="col-sm">
           <h1>ROUND 1</h1>
         </div>
-        <button type="button" class="btn btn-primary btn-lg">Mulai</button>
-        <button type="button" class="btn btn-secondary btn-lg">Stop</button>
+        <button type="button" id="mulai" class="btn btn-primary btn-lg" onclick="gameStart()">Mulai</button>
+        <button type="button" id="stop" class="btn btn-secondary btn-lg" onclick="gameOverClicked()">Stop</button>
         <div class="col-sm-3">
           <h1>TIME | <span id="time"></span> </h1>
         </div>
