NEED TO ADD SHOW WIN OR LOSE AT WHAT ROUND and ROUND TRANSITION in bootstrap popup modal + Sound effects

--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -21,12 +21,12 @@
     <div class="container" style="height: 100%">
       <div class="row p-4" style="height: 100px">
         <div id="round" class="col-sm">
-          <h1>ROUND 1</h1>
+          <h1>ROUND <span id="roundNumber">-</span></h1>
         </div>
         <button type="button" id="mulai" class="btn btn-primary btn-lg" onclick="gameStart()">Mulai</button>
         <button type="button" id="stop" class="btn btn-secondary btn-lg" onclick="gameOverClicked()">Stop</button>
         <div class="col-sm-3">
-          <h1>TIME | <span id="time"></span> </h1>
+          <h1>TIME | <span id="time">0.00</span> </h1>
         </div>
       </div>
 
