Havent (highscore database and infinite round)

--- a/SerialPort_Nodejs_Arduino/public/index.html
+++ b/SerialPort_Nodejs_Arduino/public/index.html
@@ -67,11 +67,11 @@
           <h1 id="power_3">3</h1>
         </div>
         <div id="state_4" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-          <h4>Batubara</h4>
+          <h4>Geothermal</h4>
           <h1 id="power_4">3</h1>
         </div>
         <div id="state_5" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
-          <h4>Batubara</h4>
+          <h4>Diesel</h4>
           <h1 id="power_5">3</h1>
         </div>
         <div id="state_6" class="col-sm bg-secondary text-white rounded m-1 p-2 text-center">
